--- a/laporan.html
+++ b/laporan.html
@@ -31,7 +31,7 @@
                 </ul>
             </div>
             <div class="content">
-                <h2>daftar pasien</h2>
+                <h2>jumlah pasien</h2>
                 <div class="desc">
                     <div class="table">
                         <table>
